# sanview

./: CLAUDE.md  Cargo.toml  README.md
src/: lib.rs  main.rs
src/collectors/: bhyve.rs  cam.rs  cpu.rs  geom.rs  jail.rs  memory.rs  mod.rs  multipath.rs  network.rs  ses.rs  zfs.rs
src/domain/: device.rs  mod.rs  statistics.rs  topology.rs
src/ui/: app.rs  mod.rs  state.rs
src/ui/components/: front_panel.rs  mod.rs  stats_table.rs  system_overview.rs
