[package]
name = "sanview"
version = "0.1.0"
edition = "2021"

[dependencies]
# FreeBSD kernel API access
freebsd-libgeom = "0.3.1"
libc = "0.2"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# TUI framework
ratatui = "0.27"
crossterm = "0.27"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# CLI parsing
clap = { version = "4.4", features = ["derive"] }
